--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,14 @@ spring:
       hibernate.jdbc.batch_size: 100
       hibernate.default_schema: public
     open-in-view: false
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+#      password: ${SPRING_REDIS_PASSWORD:}
+#      username: ${SPRING_REDIS_USERNAME:}
+      ssl:
+        enabled: ${SPRING_REDIS_SSL_ENABLED:false}
+        bundle: ${SPRING_REDIS_SSL_BUNDLE:}
+  cache:
+    type: redis
